# google-business-cli

./: .env.example  CHANGELOG.md  CLAUDE.md  README.md  fetch_daily.py  gads  gads.sh  generate_token.py  pyproject.toml
gads_lib/: __init__.py  ads.py  auth.py  cli.py  config.py  db.py  ga4.py  gbp.py  gsc.py  http.py  merchant.py  output.py
scripts/: install.sh
