[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "google-business-cli"
dynamic = ["version"]
description = "Unified CLI for Google Ads, Business Profile, Merchant Center, and GA4"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["google-ads", "google-business-profile", "merchant-center", "ga4", "cli", "claude-code"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Office/Business",
]
dependencies = [
    "click>=8.0",
    "requests>=2.28",
    "google-auth>=2.0",
    "google-auth-oauthlib>=1.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
gads = "gads_lib.cli:main"

[project.urls]
Homepage = "https://github.com/talas9/google-business-cli"
Repository = "https://github.com/talas9/google-business-cli"
Issues = "https://github.com/talas9/google-business-cli/issues"

[tool.setuptools.packages.find]
include = ["gads_lib*"]

[tool.setuptools.dynamic]
version = {attr = "gads_lib.__version__"}
